fixed chat form not showing smallscreen

--- a/palinodes/static/palinodes/common.css
+++ b/palinodes/static/palinodes/common.css
@@ -357,6 +357,7 @@ button {
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-y: visible;
 }
 
     #chat {
@@ -403,7 +404,6 @@ button {
 
             display: flex;
             align-items: center;
-            bottom: 0;
         }
 
             #new-comment textarea {
