--- a/palinodes/static/palinodes/smallscreen.css
+++ b/palinodes/static/palinodes/smallscreen.css
@@ -111,6 +111,7 @@
     #chat-container {
         grid-row: 4 / span 1;
         padding: 10px 20px;
+        padding-bottom: 30px;
     }
 
             #chat-container form {
